Added show details functionality for customer

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Old Timey Video Rental Store</title>
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira:500&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>
